<?xml version="1.0"?>
<package format="2">
  <name>basic_launch_tutorial</name>
  <version>0.0.0</version>
  <description>The basic_launch_tutorial package</description>

  <maintainer email="parkour5813@gmail.com">PigeonSensei</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <export>

  </export>
</package>
