<?xml version="1.0"?>
<package format="2">
  <name>basic_subscribe_tutorial</name>
  <version>0.1.0</version>
  <description>The basic_subscribe_tutorial package</description>

  <maintainer email="parkour5813@gmail.com">PigeonSensei</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp geometry_msgs</build_depend>
  <build_export_depend>roscpp geometry_msgs</build_export_depend>
  <exec_depend>roscpp geometry_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
